src/objects/PagesApi__Site_Template__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom site templates built for Fonteva Communities.</description>
    <fields>
        <fullName>PagesApi__Apex_Class__c</fullName>
        <label>Apex Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Configuration_Fieldset__c</fullName>
        <label>Configuration Field Set</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Custom_Page_VF_Page__c</fullName>
        <label>Custom Page VF Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Display_Name__c</fullName>
        <label>Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Form_VF_Page__c</fullName>
        <label>Form VF Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Image_Path__c</fullName>
        <label>Image Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Namespace__c</fullName>
        <label>Namespace</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Site Template</label>
</CustomObject>